--- a/package.json
+++ b/package.json
@@ -1,28 +1,74 @@
 {
   "name": "djangun",
   "version": "0.1.0",
-  "dependencies": {},
+  "description": "Landing, Responsive & Business Template",
+  "main": "gulpfile.js",
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@popperjs/core": "^2.6.0",
+    "bootstrap": "5.0.1",
+    "feather-icons": "^4.28.0",
+    "is_js": "^0.9.0"
+  },
   "devDependencies": {
     "autoprefixer": "^9.4.7",
-    "browser-sync": "^2.14.0",
     "cssnano": "^4.1.10",
-    "gulp": "^4.0.0",
     "gulp-imagemin": "^5.0.3",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^4.0.2",
     "gulp-uglify-es": "^1.0.4",
-    "pixrem": "^5.0.0"
+    "pixrem": "^5.0.0",
+    "@babel/core": "^7.10.4",
+    "@babel/plugin-transform-strict-mode": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "ansi": "^0.3.1",
+    "browser-sync": "^2.26.10",
+    "cross-env": "^7.0.2",
+    "del": "^5.1.0",
+    "dotenv": "^8.2.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "gh-pages": "^3.1.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-babel": "^8.0.0",
+    "gulp-clone": "^2.0.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-eslint": "^6.0.0",
+    "gulp-if": "^3.0.0",
+    "gulp-jsbeautifier": "^3.0.1",
+    "gulp-pug": "^4.0.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-replace": "^1.0.0",
+    "gulp-rtlcss": "^1.4.1",
+    "gulp-sass": "^4.1.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2",
+    "gulp-w3cjs": "^1.3.2",
+    "merge-stream": "^2.0.0",
+    "pretty": "^2.0.0",
+    "require-dir": "^1.2.0",
+    "through2": "^4.0.2",
+    "webpack-stream": "^6.1.0",
+    "yargs": "^15.4.0"
   },
   "engines": {
     "node": ">=8"
   },
   "browserslist": [
-    "last 2 versions"
+    "last 5 versions"
   ],
   "scripts": {
     "dev": "gulp",
-    "build": "gulp generate-assets"
+    "start": "gulp",
+    "build-origin": "gulp generate-assets",
+    "build": "cross-env MODE=PROD gulp build",
+    "build:test": "cross-env MODE=PROD gulp build:test",
+    "live": "gulp compile:all && cross-env MODE=PROD gulp live",
+    "publish": "git subtree push --prefix live origin gh-pages",
+    "localhost": "ssh -R 80:localhost:3000 ssh.localhost.run",
+    "deploy": "gh-pages -d live",
+    "deploy:debug": "NODE_DEBUG=gh-pages npm run deploy"
   }
 }
