change node:10 from cookiecutter-django #3202

--- a/compose/production/django/Dockerfile
+++ b/compose/production/django/Dockerfile
@@ -1,6 +1,6 @@
 ARG PYTHON_VERSION=3.9-slim-buster
 
-FROM node:10-stretch-slim as client-builder
+FROM node:10 as client-builder
 
 ARG APP_HOME=/app
 WORKDIR ${APP_HOME}
