--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Send Slack CI failed notifications
         uses: 8398a7/action-slack@v3
         with:
-          status: ${{ job.status }}
+          status: 'failure'
           fields: repo,message,commit,author,action,took,pullRequest # selectable (default: repo,message)
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
